...
                .font(.largeTitle)

            Text("\(mainVM.seconds / 10)")
                .fontWeight(.bold)
                .frame(width: 20, height:80)
                .font(.largeTitle)
                .accessibilityIdentifier("secondsOne")

            Text("\(mainVM.seconds % 10)")
                .fontWeight(.bold)
                .frame(width: 20, height:80)
                .font(.largeTitle)
                .accessibilityIdentifier("secondsTwo")
            Spacer()
        }
        .background(Color.yellow)
        .overlay(
            RoundedRectangle(cornerRadius: 10)
                .stroke(Color.black, lineWidth:10)
...
